--- a/游侠客/index.html
+++ b/游侠客/index.html
@@ -38,11 +38,44 @@
                     <li><a href="#">帮助中心</a></li>
                     <li><span>我的游侠客</span></li>
                     <li><a href="#"><span> <i class="iconfont">&#xe604;</i></span> 手机APP</a></li>
-                    <li><a href=""><i><span class="iconfont">&#xe61e;</span></i><img src="./img/topnav-right-xcx.png" alt=""></a></li>
+                    <li><a href=""><i><span class="iconfont">&#xe61e;</span></i><img src="./img/topnav-right-xcx.png"
+                                alt=""></a></li>
                     <li><a href=""><i><span class="iconfont">&#xe63d;</span></i></a></li>
-                    <li><a href=""><i><span class="iconfont">&#xe637;</span></i><img src="./img/topnav-right-wx.png" alt=""></a></li>
+                    <li><a href=""><i><span class="iconfont">&#xe637;</span></i><img src="./img/topnav-right-wx.png"
+                                alt=""></a></li>
                 </ul>
             </div>
+        </div>
+
+    </div>
+    <!-- 搜索区域 -->
+    <div class="search">
+        <!-- 版心 -->
+        <div class="search-container">
+            <!-- 左边logo -->
+            <img src="./img/logo.png" class="search-logo" alt="">
+            <!-- 搜索框 -->
+            <div class="search-area">
+                <!-- 搜索城市 -->
+                <div class="search-area-city">
+                    <span>南京站</span>
+                </div>
+                <!-- 搜索框 -->
+                <div class="search-area-box">
+                    <!-- 搜索框 输入 -->
+                    <div class="search-area-input">
+                        <span>综合</span>
+                        <input type="text">
+                    </div>
+                    <!-- 搜索框 按钮 -->
+                    <button>搜索</button>
+            </div>
+
+            <!-- 服务热线 -->
+            <div class="search-hotline"><img src="./img/search-area-hotline.png" alt=""></div>
+
+            <!-- 在线客服 -->
+            <span class="kefu"><img src="./img/search_service.png" alt=""></span>
         </div>
 
     </div>
