--- a/美团项目/美团项目.HTML
+++ b/美团项目/美团项目.HTML
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>美团网-美食-酒店-旅游-团购-电影-吃喝玩乐</title>
+    <link rel="stylesheet" href="./lib/reset/reset.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./fonts/iconfont.css">
 </head>
+
 <body>
-    
+    <!-- 顶部导航栏 -->
+    <div class="topnav">
+        <!-- 版心 -->
+        <div class="container">
+            <!-- 左边文字 -->
+            <div class="container-left">
+                <span class="iconfont">&#xe61f;</span>
+                <span>宿迁</span>
+                <a href="#">切换城市</a>
+                <a href="#">[ <a href="#">沭阳</a> <a href="#">泗阳</a> <a href="#">新沂 ]</a></a>
+            </div>
+            <!-- 右边文字 -->
+            <div class="container-right">
+                <ul>
+                    <li><a href="#">我的美团</a></li>
+                    <li><a href="#">手机APP</a></li>
+                    <li><a href="#">商家中心</a></li>
+                    <li><a href="#">美团规则</a></li>
+                    <li><a href="#">网站导航</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- 搜索框 -->
+    <div class="head">
+        <!-- 版心 -->
+        <div class="head-container">
+            <!-- 左边logo -->
+            <div class="head-container-left"><img src="./img/美团logo.png" alt=""  height="46px" width="126px;"></div>
+            <!-- 中间的搜索框 -->
+            <div class="head-container-input"></div>
+            <!-- 搜索框下方小字体 -->
+            <div class="head-container-size"></div>
+            <!-- 下方大文字 -->
+            <div class="head-container-weight"></div>
+        </div>
+
+    </div>
+
+
 </body>
+
 </html>
