--- a/美团项目/美团项目.HTML
+++ b/美团项目/美团项目.HTML
@@ -43,7 +43,15 @@
             <!-- 左边logo -->
             <div class="head-container-left"><img src="./img/美团logo.png" alt=""  height="46px" width="126px;"></div>
             <!-- 中间的搜索框 -->
-            <div class="head-container-input"></div>
+            <div class="head-container-input">
+                <!-- 输入框 -->
+                <div class="head-container-text">
+                    <span>搜索商家或地点</span>
+                    <input type="text">
+                </div>
+                <!-- 搜索按钮 -->
+                <button>搜索</button>
+            </div>
             <!-- 搜索框下方小字体 -->
             <div class="head-container-size"></div>
             <!-- 下方大文字 -->
