--- a/美团项目/index.html
+++ b/美团项目/index.html
@@ -5,24 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>美团网-美食-酒店-旅游-团购-电影-吃喝玩乐</title>
+    <title> 美团网-美食-酒店-旅游-团购-电影-吃喝玩乐</title>
+
     <link rel="stylesheet" href="./lib/reset/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./fonts/iconfont.css">
+    <link rel="stylesheet" href="./fonts/搜索/iconfont.css">
 </head>
 
 <body>
     <!-- 顶部导航栏 -->
-    <div class="topnav">
+    <div class="topnav clearfix">
         <!-- 版心 -->
-        <div class="container">
+        <div class="container ">
             <!-- 左边文字 -->
             <div class="container-left">
                 <span class="iconfont">&#xe61f;</span>
                 <span>宿迁</span>
                 <a href="#">切换城市</a>
-                <a href="#">[ <a href="#">沭阳</a> <a href="#">泗阳</a> <a href="#">新沂 ]</a></a>
+                <a href="#">[ <a href="#">沭阳</a> <a href="#">泗阳</a> <a href="#">新沂 ]</a>
+             <span>立即登陆</span>
+             <a href="#">注册</a>
             </div>
             <!-- 右边文字 -->
             <div class="container-right">
@@ -39,18 +43,18 @@
     <!-- 搜索框 -->
     <div class="head">
         <!-- 版心 -->
-        <div class="head-container">
+        <div class="head-container clearfix">
             <!-- 左边logo -->
             <div class="head-container-left"><img src="./img/美团logo.png" alt=""  height="46px" width="126px;"></div>
             <!-- 中间的搜索框 -->
-            <div class="head-container-input">
+            <div class="head-container-input clearfix" >
                 <!-- 输入框 -->
                 <div class="head-container-text">
                     <span>搜索商家或地点</span>
                     <input type="text">
                 </div>
                 <!-- 搜索按钮 -->
-                <button>搜索</button>
+                <button><span class="iconfont">&#xe615;</span></button>
             </div>
             <!-- 搜索框下方小字体 -->
             <div class="head-container-size"></div>
