--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -87,11 +87,45 @@
                 </div>
                 <!-- 按钮 -->
                 <button><img src="./img/search_icon.png" alt=""></button>
-
             </div>
         </div>
     </div>
+    <!-- 轮播图 -->
+    <div class="carousel">
+        <!-- 版心 -->
+        <div class="container">
+            <!-- 轮播图列表 ul -->
+            <ul class="carousel-list">
+                <!-- 轮播图列表项 li-->
+                <li>
+                    <!-- 轮播图图片链接 -->
+                    <a href="">
+                        <!-- 图片 -->
+                        <img src="./upload/list-1.webp" alt="">
+                    </a>
+                </li>
+            </ul>
 
+            <!-- 轮播图侧边栏 -->
+            <div class="carousel-aside">
+
+                <!-- 轮播图侧边栏列表项 -->
+                <a href="">手机 电话卡 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">电视 盒子 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">笔记本 平板 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">家电 插线板 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">出行 穿戴 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">智能 路由器 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">电源 配件 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">健康 儿童 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">耳机 音响 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                <a href="">生活 箱包 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+            </div>
+            </div>
+        
+    </div>
+ 
+    
 
 
 </body>
