--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>小米商城-小米9Pro、小米MIX</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
+    <link rel="stylesheet" href="./fonts/iconfont.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+
 </head>
 
 <body>
@@ -89,43 +91,126 @@
                 <button><img src="./img/search_icon.png" alt=""></button>
             </div>
         </div>
-    </div>
-    <!-- 轮播图 -->
-    <div class="carousel">
-        <!-- 版心 -->
-        <div class="container">
-            <!-- 轮播图列表 ul -->
-            <ul class="carousel-list">
-                <!-- 轮播图列表项 li-->
-                <li>
-                    <!-- 轮播图图片链接 -->
-                    <a href="">
-                        <!-- 图片 -->
-                        <img src="./upload/list-1.webp" alt="">
+        <!-- 轮播图 -->
+        <div class="carousel">
+            <!-- 版心 -->
+            <div class="container">
+                <!-- 轮播图列表 -->
+                <ul class="carousel-list">
+                    <!-- 轮播图列表项 -->
+                    <li>
+                        <!-- 轮播图图片链接 -->
+                        <a href=""><img src="./upload/list-1.webp" alt="">
+                        </a>
+                    </li>
+                </ul>
+
+
+
+                <!-- 左边栏 -->
+                <div class="carsoule-aside">
+                    <!-- 左边链接 -->
+                    <a href="">手机 电话卡
+                        <i><span class="iconfont">&#xe646;<span></i>
                     </a>
-                </li>
-            </ul>
 
-            <!-- 轮播图侧边栏 -->
-            <div class="carousel-aside">
+                    <a href="">电视 盒子
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
 
-                <!-- 轮播图侧边栏列表项 -->
-                <a href="">手机 电话卡 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">电视 盒子 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">笔记本 平板 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">家电 插线板 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">出行 穿戴 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">智能 路由器 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">电源 配件 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">健康 儿童 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">耳机 音响 <i><img src="./img/小右指向标.png" alt=""></i></a>                
-                <a href="">生活 箱包 <i><img src="./img/小右指向标.png" alt=""></i></a>                
+                    <a href="">笔记本 平板
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">家电 插线板
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">出行 穿戴
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">智能 路由器
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">电源 配件
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">健康 儿童
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">耳机 音响
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+
+                    <a href="">生活 箱包
+                        <i><span class="iconfont">&#xe646;<span></i>
+                    </a>
+                </div>
+                <!-- 左按钮 -->
+                <a href="" class="product"><i><span class="iconfont">&#xe614;</span></i></a>
+                <!-- 右按钮 -->
+                <a href="" class="products"><i><span class="iconfont">&#xe612;<span></i></a>
             </div>
+        </div>
+
+        <!-- 优惠活动 -->
+        <div class="discount">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 各种服务 -->
+                <div class="discount-server">
+                    <!-- 服务链接 -->
+                    <a href=""><img src="./img/discount_item_1.png" alt=""><br><span>小米秒杀</span> </a>
+                    <a href=""><img src="./img/discount_item_2.png" alt=""><br><span>企业团购</span> </a>
+                    <a href=""><img src="./img/discount_item_3.png" alt=""><br><span>F码通道</span> </a>
+                    <a href=""><img src="./img/discount_item_4.png" alt=""><br><span>米粉卡</span> </a>
+                    <a href=""><img src="./img/discount_item_5.png" alt=""><br><span>以旧换新</span> </a>
+                    <a href=""><img src="./img/discount_item_6.png" alt=""><br><span>话费充值</span> </a>
+                </div>
+
+                <!-- 优惠商品 -->
+                <a href="" class="discount-product"><img src="./upload/discount_1.jpg" alt=""></a>
+                <a href="" class="discount-product"><img src="./upload/discount_2.jpg" alt=""></a>
+                <a href="" class="discount-product"><img src="./upload/discount_3.jpg" alt=""></a>
             </div>
-        
-    </div>
- 
-    
+        </div>
+        <!-- 小米闪购 -->
+        <div class="flash">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="title">
+                   <h2>小米闪购</h2>
+                   <div class="title-right">
+                       <a href=""> <span class="iconfont">&#xe614;</span></a>
+                       <a href=""><span class="iconfont">&#xe612;</span></a>
+
+                   </div>
+                </div>
+                <!-- 闪购内容 -->
+                <div class="flash-content">
+                    <!-- 秒杀 -->
+                    <div class="flash-seckill">
+                        <h3><span>14:00</span> 场</h3>
+                        <span><img src="./img/flash-content-seckill.png" alt=""></span><br>
+                        <span  class="flash-seckill-text">本场已结束</span>
+                        <div class="flash-seckill-time">
+                            <span>00</span><small>:</small>
+                            <span>00</span><small>:</small>
+                            <span>00</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
 
 
 </body>
