--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>小米商城-小米9Pro、小米MIX</title>
+    <title>小米商城-小米9 Pro</title>
     <link rel="stylesheet" href="./lib/reset/reset.css">
-    <link rel="stylesheet" href="./fonts/iconfont.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
-
 </head>
 
 <body>
@@ -18,41 +16,40 @@
     <div class="topnav">
         <!-- 版心 -->
         <div class="container clearfix">
-            <!-- 左边文字 -->
+            <!-- 左边 -->
             <div class="topnav-left">
-                <a href="#">小米商城</a>
+                <a href="">小米商城</a>
                 <i>|</i>
-                <a href="#">MIUI</a>
+                <a href="">MIUI</a>
                 <i>|</i>
-                <a href="#">IoT</a>
+                <a href="">loT</a>
                 <i>|</i>
-                <a href="#">云服务</a>
+                <a href="">云服务</a>
                 <i>|</i>
-                <a href="#">金融</a>
+                <a href="">金融</a>
                 <i>|</i>
-                <a href="#">有品</a>
+                <a href="">有品</a>
                 <i>|</i>
-                <a href="#">小爱开放平台</a>
+                <a href="">小爱开放平台</a>
                 <i>|</i>
-                <a href="#">企业团购</a>
+                <a href="">企业团购</a>
                 <i>|</i>
-                <a href="#">资质证照</a>
+                <a href="">资质证照</a>
                 <i>|</i>
-                <a href="#">协议规则</a>
+                <a href="">协议规则</a>
                 <i>|</i>
-                <a href="#">下载app</a>
+                <a href="">下载app</a>
                 <i>|</i>
-                <a href="#">Select Location</a>
+                <a href="">Select Location</a>
             </div>
-            <!-- 右边文字 -->
+            <!-- 右边 -->
             <div class="topnav-right">
-                <a href="#">登陆</a>
+                <a href="">登录</a>
                 <i>|</i>
-                <a href="#">注册</a>
+                <a href="">注册</a>
                 <i>|</i>
-                <a href="#">消息通知</a>
-                <!-- 购物车cart -->
-                <a class="cart">购物车 (<span>0</span>)</a>
+                <a href="">消息通知</a>
+                <a href="" class="cart">购物车 <span>(0)</span></a>
             </div>
         </div>
     </div>
@@ -60,154 +57,138 @@
     <div class="searchnav">
         <!-- 版心 -->
         <div class="container clearfix">
-            <!-- 左边logo -->
-            <a class="searchnav-logo">
+            <!-- logo -->
+            <div class="searchnav-logo">
                 <img src="./img/mi-logo.png" alt="">
-            </a>
+            </div>
             <!-- 中间文字 -->
             <div class="searchnav-center">
-                <a href="#">小米手机</a>
-                <a href="#">Redmi红米</a>
-                <a href="#">电视</a>
-                <a href="#">笔记本</a>
-                <a href="#">家电</a>
-                <a href="#">路由器</a>
-                <a href="#">智能硬件</a>
-                <a href="#">服务</a>
-                <a href="#">社区</a>
+                <a href="">小米手机</a>
+                <a href="">Redmi红米</a>
+                <a href="">电视</a>
+                <a href="">笔记本</a>
+                <a href="">家电</a>
+                <a href="">路由器</a>
+                <a href="">智能硬件</a>
+                <a href="">服务</a>
+                <a href="">社区</a>
             </div>
-            <!-- 搜索框 -->
+            <!-- 右边搜索框 -->
             <div class="searchnav-search">
+
                 <!-- 输入框 -->
                 <div class="searchnav-input">
                     <input type="text">
                 </div>
-                <!-- 2.1.3.3 热门搜索关键词 -->
-                <div class="searchnav-hotkeys">
-                    <span>小米9 Pro 5G</span>
-                    <span>Redmi Note 8</span>
+                <!-- 输入框文字 -->
+                <div class="searchnav-input-size">
+                    <a href="">小米9 Pro 5G</a>
+                    <a href="">Redmi Note 8</a>
                 </div>
                 <!-- 按钮 -->
                 <button><img src="./img/search_icon.png" alt=""></button>
             </div>
         </div>
-        <!-- 轮播图 -->
-        <div class="carousel">
-            <!-- 版心 -->
-            <div class="container">
-                <!-- 轮播图列表 -->
-                <ul class="carousel-list">
-                    <!-- 轮播图列表项 -->
-                    <li>
-                        <!-- 轮播图图片链接 -->
-                        <a href=""><img src="./upload/list-1.webp" alt="">
-                        </a>
-                    </li>
-                </ul>
+    </div>
+    <!-- 轮播图 -->
+    <div class="carsoule">
+        <!-- 版心 -->
+        <div class="container">
+            <!-- 图片 -->
+            <img src="./upload/list-1.webp" alt="">
+            <!-- 侧边栏 -->
+            <div class="carsoule-aside">
+                <!-- 侧边栏链接 -->
+                <a href="">手机 电话卡<i class="iconfont-arrow-right-big"></i></a>
+                <a href="">电视 盒子 <i class="iconfont-arrow-right-big"></i></a>
+                <a href="">笔记本 平板<i class="iconfont-arrow-right-big"></i></a>
+                <a href="">家电 插线板<i class="iconfont-arrow-right-big"></i></a>
+                <a href="">出行 穿戴 <i class="iconfont-arrow-right-big"></i></a>
+                <a href="">智能 路由器<i class="iconfont-arrow-right-big"></i></a>
+                <a href="">电源 配件 <i class="iconfont-arrow-right-big"></i></a>
+                <a href="">健康 儿童 <i class="iconfont-arrow-right-big"></i></a>
+                <a href="">耳机 音箱 <i class="iconfont-arrow-right-big"></i></a>
+                <a href="">生活 箱包 <i class="iconfont-arrow-right-big"></i></a>
+            </div>
+            <!-- 左右按钮 -->
+            <a href="" class="carousel-left iconfont-arrow-left-big-thin"></a>
+            <a href="" class="carousel-right iconfont-arrow-right-big-thin"></a>
 
+            <!-- 轮播图点 -->
+            <ol class="yuan">
+                <li class="dian"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </div>
+    </div>
 
-
-                <!-- 左边栏 -->
-                <div class="carsoule-aside">
-                    <!-- 左边链接 -->
-                    <a href="">手机 电话卡
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">电视 盒子
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">笔记本 平板
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">家电 插线板
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">出行 穿戴
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">智能 路由器
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">电源 配件
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">健康 儿童
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">耳机 音响
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-
-                    <a href="">生活 箱包
-                        <i><span class="iconfont">&#xe646;<span></i>
-                    </a>
-                </div>
-                <!-- 左按钮 -->
-                <a href="" class="product"><i><span class="iconfont">&#xe614;</span></i></a>
-                <!-- 右按钮 -->
-                <a href="" class="products"><i><span class="iconfont">&#xe612;<span></i></a>
+    <!-- 优惠活动 -->
+    <div class="discount">
+        <!-- 版心 -->
+        <div class="container">
+            <!-- 各种服务 -->
+            <div class="discount-server">
+                <a href=""><img src="./img/discount_item_1.png" alt=""><br> 小米秒杀 </a>
+                <a href=""><img src="./img/discount_item_2.png" alt=""> <br>企业团购 </a>
+                <a href=""><img src="./img/discount_item_3.png" alt=""><br>F码通道 </a>
+                <a href=""><img src="./img/discount_item_4.png" alt=""><br>米粉卡 </a>
+                <a href=""> <img src="./img/discount_item_5.png" alt=""><br>以旧换新 </a>
+                <a href=""> <img src="./img/discount_item_6.png" alt=""><br>话费充值 </a>
+            </div>
+            <!-- 优惠商品 -->
+            <div class="discount-shop">
+                <a href=""><img src="./upload/discount_1.jpg" alt=""></a>
+                <a href=""><img src="./upload/discount_2.jpg" alt=""></a>
+                <a href=""><img src="./upload/discount_3.jpg" alt=""></a>
             </div>
         </div>
-
-        <!-- 优惠活动 -->
-        <div class="discount">
-            <!-- 版心 -->
-            <div class="container clearfix">
-                <!-- 各种服务 -->
-                <div class="discount-server">
-                    <!-- 服务链接 -->
-                    <a href=""><img src="./img/discount_item_1.png" alt=""><br><span>小米秒杀</span> </a>
-                    <a href=""><img src="./img/discount_item_2.png" alt=""><br><span>企业团购</span> </a>
-                    <a href=""><img src="./img/discount_item_3.png" alt=""><br><span>F码通道</span> </a>
-                    <a href=""><img src="./img/discount_item_4.png" alt=""><br><span>米粉卡</span> </a>
-                    <a href=""><img src="./img/discount_item_5.png" alt=""><br><span>以旧换新</span> </a>
-                    <a href=""><img src="./img/discount_item_6.png" alt=""><br><span>话费充值</span> </a>
-                </div>
-
-                <!-- 优惠商品 -->
-                <a href="" class="discount-product"><img src="./upload/discount_1.jpg" alt=""></a>
-                <a href="" class="discount-product"><img src="./upload/discount_2.jpg" alt=""></a>
-                <a href="" class="discount-product"><img src="./upload/discount_3.jpg" alt=""></a>
+    </div>
+    <!-- 闪购 -->
+    <div class="falsh">
+        <!-- 版心  -->
+        <div class="container clearfix">
+            <!-- 标题 -->
+            <div class="falsh-title">
+               <h2>小米闪购</h2>
+               <div class="flash-title-button">
+                    <a href="">
+                      <i class="iconfont-arrow-left-big"></i>
+                    </a>
+                    <a href="">
+                      <i class="iconfont-arrow-right-big"></i>
+                    </a>
+                  </div>
             </div>
-        </div>
-        <!-- 小米闪购 -->
-        <div class="flash">
-            <!-- 版心 -->
-            <div class="container clearfix">
-                <!-- 标题 -->
-                <div class="title">
-                   <h2>小米闪购</h2>
-                   <div class="title-right">
-                       <a href=""> <span class="iconfont">&#xe614;</span></a>
-                       <a href=""><span class="iconfont">&#xe612;</span></a>
-
-                   </div>
+            <!-- 内容 -->
+            <div class="falsh-content">
+                <!-- 秒杀 -->
+                <div class="falsh-seckill">
+                    <h3>20:00 场</h3>
+                    <img src="./img/flash-content-seckill.png" alt="">
+                    <p>距离结束还有</p>
+                    <span>00</span><small>:</small>
+                    <span>53</span><small>:</small>
+                    <span>52</span>
                 </div>
-                <!-- 闪购内容 -->
-                <div class="flash-content">
-                    <!-- 秒杀 -->
-                    <div class="flash-seckill">
-                        <h3><span>14:00</span> 场</h3>
-                        <span><img src="./img/flash-content-seckill.png" alt=""></span><br>
-                        <span  class="flash-seckill-text">本场已结束</span>
-                        <div class="flash-seckill-time">
-                            <span>00</span><small>:</small>
-                            <span>00</span><small>:</small>
-                            <span>00</span>
-                        </div>
-                    </div>
+                <!-- 热门商品 -->
+                <div class="hotshop">
+                    <a href="" class="hotshop-product">
+                        <img src="./upload/hotshop1.jpg" alt="">
+                        <h4>高品质多功能头戴耳机</h4>
+                        <p>我的私人KTV</p>
+                        <span>179元</span><s>249元</s>
+                    </a>
                 </div>
-
             </div>
+
         </div>
+    </div>
+
+
 
 
 
