--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -147,49 +147,100 @@
             </div>
         </div>
     </div>
-    <!-- 闪购 -->
-    <div class="falsh">
-        <!-- 版心  -->
-        <div class="container clearfix">
-            <!-- 标题 -->
-            <div class="falsh-title">
-               <h2>小米闪购</h2>
-               <div class="flash-title-button">
-                    <a href="">
-                      <i class="iconfont-arrow-left-big"></i>
-                    </a>
-                    <a href="">
-                      <i class="iconfont-arrow-right-big"></i>
-                    </a>
-                  </div>
-            </div>
-            <!-- 内容 -->
-            <div class="falsh-content">
-                <!-- 秒杀 -->
-                <div class="falsh-seckill">
-                    <h3>20:00 场</h3>
-                    <img src="./img/flash-content-seckill.png" alt="">
-                    <p>距离结束还有</p>
-                    <span>00</span><small>:</small>
-                    <span>53</span><small>:</small>
-                    <span>52</span>
+    <!-- 大盒子背景 -->
+    <div class="big-box">
+        <!-- 闪购 -->
+        <div class="falsh">
+            <!-- 版心  -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="falsh-title">
+                    <h2>小米闪购</h2>
+                    <div class="flash-title-button">
+                        <a href="">
+                            <i class="iconfont-arrow-left-big"></i>
+                        </a>
+                        <a href="">
+                            <i class="iconfont-arrow-right-big"></i>
+                        </a>
+                    </div>
                 </div>
-                <!-- 热门商品 -->
-                <div class="hotshop">
-                    <a href="" class="hotshop-product">
-                        <img src="./upload/hotshop1.jpg" alt="">
-                        <h4>高品质多功能头戴耳机</h4>
-                        <p>我的私人KTV</p>
-                        <span>179元</span><s>249元</s>
-                    </a>
+                <!-- 内容 -->
+                <div class="falsh-content">
+                    <!-- 秒杀 -->
+                    <div class="falsh-seckill">
+                        <h3>20:00 场</h3>
+                        <img src="./img/flash-content-seckill.png" alt="">
+                        <p>距离结束还有</p>
+                        <span>00</span><small>:</small>
+                        <span>53</span><small>:</small>
+                        <span>52</span>
+                    </div>
+                    <!-- 热门商品 -->
+                    <div class="hotshop">
+                        <a href="" class="hotshop-product">
+                            <img src="./upload/hotshop1.jpg" alt="">
+                            <h4>高品质多功能头戴耳机</h4>
+                            <p>我的私人KTV</p>
+                            <span>179元</span><s>249元</s>
+                        </a>
+                        <a href="" class="hotshop-product">
+                            <img src="./upload/hotshop1.jpg" alt="">
+                            <h4>高品质多功能头戴耳机</h4>
+                            <p>我的私人KTV</p>
+                            <span>179元</span><s>249元</s>
+                        </a>
+                        <a href="" class="hotshop-product">
+                            <img src="./upload/hotshop1.jpg" alt="">
+                            <h4>高品质多功能头戴耳机</h4>
+                            <p>我的私人KTV</p>
+                            <span>179元</span><s>249元</s>
+                        </a>
+                        <a href="" class="hotshop-product">
+                            <img src="./upload/hotshop1.jpg" alt="">
+                            <h4>高品质多功能头戴耳机</h4>
+                            <p>我的私人KTV</p>
+                            <span>179元</span><s>249元</s>
+                        </a>
+                    </div>
                 </div>
             </div>
-
         </div>
+
+        <!-- 背景广告 -->
+        <div class="background-phone">
+            <!-- 版心 -->
+            <div class="container">
+                <img src="./upload/广告.webp" alt=""></div>
+        </div>
+        <!-- 手机专区导航 -->
+        <div class="phonenav-area">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 手机标题 -->
+                <div class="phonenav-title">
+                    <span>手机</span>
+                    <a href="" class="iconfont-arrow-right-big"></a>
+                     <a href="">查看全部</a>
+                    
+                </div>
+                <!-- 左侧背景图 -->
+                <div class="phonenav-left clearfix">
+                    <img src="./upload/backgroud.webp" alt="">
+                </div>
+                <!-- 中间手机集合 -->
+                <div class="pohonenav-gather">
+                    <img src="./upload/phone1.webp" alt="">
+                    <h4>小米CC9 Pro</h4>
+                    <p>1亿像素 五摄四闪</p>
+                    <span>2799元起</span>
+                </div>
+            </div>
+        </div>
+
+
+
     </div>
-
-
-
 
 
 
