--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -211,7 +211,8 @@
         <div class="background-phone">
             <!-- 版心 -->
             <div class="container">
-                <img src="./upload/广告.webp" alt=""></div>
+                <a href=""><img src="./upload/广告.webp" alt=""></a>
+            </div>
         </div>
         <!-- 手机专区导航 -->
         <div class="phonenav-area">
@@ -221,22 +222,244 @@
                 <div class="phonenav-title">
                     <span>手机</span>
                     <a href="" class="iconfont-arrow-right-big"></a>
-                     <a href="">查看全部</a>
-                    
+                    <a href="">查看全部</a>
+
                 </div>
                 <!-- 左侧背景图 -->
                 <div class="phonenav-left clearfix">
                     <img src="./upload/backgroud.webp" alt="">
                 </div>
                 <!-- 中间手机集合 -->
-                <div class="pohonenav-gather">
-                    <img src="./upload/phone1.webp" alt="">
-                    <h4>小米CC9 Pro</h4>
-                    <p>1亿像素 五摄四闪</p>
-                    <span>2799元起</span>
+                <div class="pohonenav-gather clearfix">
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone1.webp" alt="" width="160px" height="160px">
+                        <h4>小米CC9 Pro</h4>
+                        <p>1亿像素 五摄四闪</p>
+                        <span>2799元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone2.webp" alt="" width="160px" height="160px">
+                        <h4>小米9 Pro 5G</h4>
+                        <p>5G双卡全网通， 骁龙855Plus</p>
+                        <span>3699元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone3.webp" alt="" width="160px" height="160px">
+                        <h4>Redmi 8</h4>
+                        <p>5000mAh超长续航</p>
+                        <span>699元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone4.webp" alt="" width="160px" height="160px">
+                        <h4>Redmi 8A</h4>
+                        <p>5000mAh超长续航</p>
+                        <span>699元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone5.webp" alt="" width="160px" height="160px">
+                        <h4>Redmi Note 8 Pro</h4>
+                        <p>6400万全景四摄</p>
+                        <span>1299元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone6.webp" alt="" width="160px" height="160px">
+                        <h4>Redmi Note 8</h4>
+                        <p>千元4800万四摄</p>
+                        <span>999元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone7.webp" alt="" width="160px" height="160px">
+                        <h4>Remdi K20 Pro 尊享版</h4>
+                        <p>855 Plus, 弹出全面屏</p>
+                        <span>2699元起</span>
+                    </a>
+                    <a href="" class="product-phone">
+                        <img src="./upload/phone8.webp" alt="" width="160px" height="160px">
+                        <h4>Redmi Note 7</h4>
+                        <p>4800万拍照千元机</p>
+                        <span>1099元起</span>
+                    </a>
                 </div>
             </div>
         </div>
+        <!-- 广告 -->
+        <div class="background-home">
+            <!-- 版心 -->
+            <div class="container">
+                <img src="./upload/广告2.webp" alt="">
+            </div>
+        </div>
+        <!-- 家电区域 -->
+        <div class="home-area">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="home-title">
+                    <h3>家电</h3>
+                    <div class="home-size">
+                        <a href="">热门</a>
+                        <a href="">电影影音</a>
+                    </div>
+                </div>
+                <!-- 左侧 -->
+                <div class="home-area-left">
+                    <img src="./upload/home-left1.webp" alt="" width="234px" height="300px">
+                    <img src="./upload/home-left2.webp" alt="" width="234px" height="300px">
+                </div>
+                <!-- 家电集合 -->
+                <div class="home-gather">
+                    <a href="" class="home-product">
+                        <img src="./upload/home1.webp" alt="" width="160px" height="160px">
+                        <h4>米家互联网空调C1 (一级能效)</h4>
+                        <p>变频节能省电，自清洁</p>
+                        <span>2199元起</span>
+                    </a>
+                    <a href="" class="home-product">
+                        <img src="./upload/home2.webp" alt="" width="160px" height="160px">
+                        <h4>米家空调</h4>
+                        <p>出众静音，快速制冷热</p>
+                        <span>1699元起</span>
+                    </a>
+
+                    <a href="" class="home-product">
+                        <img src="./upload/home3.webp" alt="" width="160px" height="160px">
+                        <h4>米家互联网烘洗一体机 Pro 10kg</h4>
+                        <p>智能洗烘，智能省力</p>
+                        <span>2999元起</span>
+                    </a>
+                    <a href="" class="home-product">
+                        <img src="./upload/home4.webp" alt="" width="160px" height="160px">
+                        <h4>小米电视4A 32英寸</h4>
+                        <p>人工智能系统，高清液晶屏</p>
+                        <span>699元起</span>
+                    </a>
+                    <a href="" class="home-product">
+                        <img src="./upload/home5.webp" alt="" width="160px" height="160px">
+                        <h4>Redmi全自动波轮洗衣机1A 8kg</h4>
+                        <p>一键操作， 父母都爱用</p>
+                        <span>699元起</span>
+                    </a>
+                    <a href="" class="home-product">
+                        <img src="./upload/home6.webp" alt="" width="160px" height="160px">
+                        <h4>小米全面屏电视E55A</h4>
+                        <p>全面屏设计，人工智能语音</p>
+                        <span>1799元起</span>
+                    </a>
+                    <a href="" class="home-product">
+                        <img src="./upload/home7.webp" alt="" width="160px" height="160px">
+                        <h4>15.6"四核i7 16G 独显 512G"</h4>
+                        <p>全面均衡的国民轻薄本</p>
+                        <span>4699元起</span>
+                    </a>
+                    <a class="home-prodcut-more1">
+                        <img src="./upload/home8.webp" alt="">
+                        <h4>Air13.3 "2019 <br> 款"</h4>
+                        <span>4499元起</span>
+                    </a>
+                    <a class="home-prodcut-more2">
+                        <i class="iconfont-circle-arrow-right"></i>
+                        <h4>浏览更多</h4>
+                        <p>电影影音</p>
+                    </a>
+                </div>
+            </div>
+            <!-- 广告 -->
+            <div class="background-intelligent">
+                <!-- 版心 -->
+                <div class="container">
+                    <img src="./upload/广告3.webp" alt="">
+                </div>
+            </div>
+            <!-- 智能 -->
+            <div class="intelligent">
+                <!-- 版心 -->
+                <div class="container clearfix">
+                    <!-- 标题 -->
+                    <div class="intelligent-title">
+                        <h3>智能</h3>
+                        <!-- 标题右边 -->
+                        <div class="intelligent-size">
+                            <a href="">热门</a>
+                            <a href="">安防</a>
+                            <a href="">出行</a>
+                        </div>
+                    </div>
+                    <!-- 左侧 -->
+                    <div class="intelligent-left">
+                        <img src="./upload/zhineng-left1.webp" alt="">
+                        <img src="./upload/zhineng-left.webp" alt="">
+
+                    </div>
+                    <!-- 智能家居集合 -->
+                    <div class="intelligent-gather clearfix">
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent1.webp" alt="">
+                            <h4>小米[小爱老师]</h4>
+                            <p>口袋里的英语外教</p>
+                            <span>499元起</span>
+                        </a>
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent2.webp" alt="">
+                            <h4>小米米家智能门锁 推拉式</h4>
+                            <p>一步推拉 高智能门锁</p>
+                            <span>1699元</span>
+                        </a>
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent3.webp" alt="">
+                            <h4>小米小爱音响 Play</h4>
+                            <p>听音乐、语音遥控家电</p>
+                            <span>99元</span>
+                            <s>169元</s>
+                        </a>
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent4.webp" alt="">
+                            <h4>小爱音响万能遥控版</h4>
+                            <p>传统家电秒变智能</p>
+                            <span>149元</span>
+                            <s>199元</s>
+                        </a>
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent5.webp" alt="">
+                            <h4>米家电饭煲4L</h4>
+                            <p>890W 立体加热</p>
+                            <span>299元</span>
+                        </a>
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent6.webp" alt="">
+                            <h4>小米手环4</h4>
+                            <p>大彩屏显，20天超长续航</p>
+                            <span>169元</span>
+                        </a>
+                        <a href="" class="intelligent-product">
+                            <img src="./upload/intelligent7.webp" alt="">
+                            <h4>米家九号平衡轮</h4>
+                            <p>能花式酷玩的"风火轮"</p>
+                            <span>999元起</span>
+                        </a>
+                        <div class="box">
+                            <a>
+                                <div class="box-left">
+                                    <h4>小米体脂秤2</h4>
+                                    <span>99元</span>
+                                </div>
+                                <img src="./upload/intelligent8.webp" alt="">
+                            </a>
+                            <a>
+                                <div class="box-right">
+                                        <h4>浏览更多</h4>
+                                        <p>热门</p>
+                                </div>
+                                <i class="iconfont-circle-arrow-right"></i>
+                               
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
 
 
 
