--- a/小米官网/index.html
+++ b/小米官网/index.html
@@ -115,14 +115,14 @@
             <a href="" class="carousel-right iconfont-arrow-right-big-thin"></a>
 
             <!-- 轮播图点 -->
-            <ol class="yuan">
-                <li class="dian"></li>
+            <ul class="yuan">
                 <li></li>
                 <li></li>
                 <li></li>
                 <li></li>
                 <li></li>
-            </ol>
+                <li></li>
+            </ul>
         </div>
     </div>
 
@@ -185,22 +185,22 @@
                             <span>179元</span><s>249元</s>
                         </a>
                         <a href="" class="hotshop-product">
-                            <img src="./upload/hotshop1.jpg" alt="">
-                            <h4>高品质多功能头戴耳机</h4>
-                            <p>我的私人KTV</p>
-                            <span>179元</span><s>249元</s>
+                            <img src="./upload/婴儿车.png" alt="">
+                            <h4>米兔折叠婴儿车 灰色</h4>
+                            <p>出发去向往的地方</p>
+                            <span>629元</span><s>699元</s>
                         </a>
                         <a href="" class="hotshop-product">
-                            <img src="./upload/hotshop1.jpg" alt="">
-                            <h4>高品质多功能头戴耳机</h4>
-                            <p>我的私人KTV</p>
-                            <span>179元</span><s>249元</s>
+                            <img src="./upload/电暖器.png" alt="">
+                            <h4>米家电暖器 白色</h4>
+                            <p>整屋均匀升温</p>
+                            <span>309元</span><s>349元</s>
                         </a>
                         <a href="" class="hotshop-product">
-                            <img src="./upload/hotshop1.jpg" alt="">
-                            <h4>高品质多功能头戴耳机</h4>
-                            <p>我的私人KTV</p>
-                            <span>179元</span><s>249元</s>
+                            <img src="./upload/自行车.png" alt="">
+                            <h4>米兔儿童自行车</h4>
+                            <p>骑行好玩伴</p>
+                            <span>699元</span><s>799元</s>
                         </a>
                     </div>
                 </div>
@@ -446,24 +446,400 @@
                             </a>
                             <a>
                                 <div class="box-right">
-                                        <h4>浏览更多</h4>
-                                        <p>热门</p>
+                                    <h4>浏览更多</h4>
+                                    <p>热门</p>
                                 </div>
                                 <i class="iconfont-circle-arrow-right"></i>
-                               
                             </a>
                         </div>
                     </div>
                 </div>
             </div>
 
-
+            <!-- 广告4 -->
+            <div class="background-match">
+                <!-- 版心 -->
+                <div class="container">
+                    <img src="./upload/广告4.webp" alt="">
+                </div>
+            </div>
+            <!-- 搭配主题 -->
+            <div class="match">
+                <!-- 版心 -->
+                <div class="container">
+                    <!-- 标题 -->
+                    <div class="match-title">
+                        <h3>搭配</h3>
+                        <div class="title-size">
+                            <a href="">热门</a>
+                            <a href="">耳机音响</a>
+                        </div>
+                    </div>
+                    <!-- 左边 -->
+                    <div class="match-left">
+                        <img src="./upload/检查left1.webp" alt="">
+                        <img src="./upload/检查left2.webp" alt="">
+                    </div>
+                    <!-- 搭配集合 -->
+                    <div class="match-gather">
+                        <a href="" class="match-product">
+                            <img src="./upload/match1.webp" alt="">
+                            <h4>小米真无线蓝牙耳机Air2</h4>
+                            <p>智能真无线，轻松舒适佩戴</p>
+                            <span>399元</span>
+                        </a>
+                        <a href="" class="match-product">
+                            <img src="./upload/match2.webp" alt="">
+                            <h4>高速无线充套装</h4>
+                            <p>快速无线闪充，Qi充电标准</p>
+                            <span>149元</span>
+                        </a>
+                        <a href="" class="match-product">
+                            <img src="./upload/match3.webp" alt="">
+                            <h4>Redmi充电宝 10000mAh 标准版</h4>
+                            <p>10000mAh大电量</p>
+                            <span>59元</span>
+                        </a>
+                        <a href="" class="match-product">
+                            <img src="./upload/match4.webp" alt="">
+                            <h4>Redmi充电宝 20000mAh 快充版</h4>
+                            <p>大容量，可上飞机</p>
+                            <span>99元</span>
+                        </a>
+                        <a href="" class="match-product">
+                            <img src="./upload/match5.webp" alt="">
+                            <h4>小米插线板 5孔位</h4>
+                            <p>多重安全保护</p>
+                            <span>39元</span>
+                        </a>
+                        <a href="" class="match-product">
+                            <img src="./upload/match6.webp" alt="">
+                            <h4>小米蓝牙耳机AirDots青春版</h4>
+                            <p>雅致典约，收纳充电盒</p>
+                            <span>199元</span>
+                        </a>
+                        <a href="" class="match-product">
+                            <img src="./upload/match7.webp" alt="">
+                            <h4>小米小爱蓝牙音响 随身版</h4>
+                            <p>小巧便携，一键唤醒小爱</p>
+                            <span>49元</span>
+                        </a>
+                        <a class="home-prodcut-more1">
+                            <img src="./upload/match8.webp" alt="">
+                            <h4>小米小爱触屏 <br> 音响"</h4>
+                            <span>249元起</span>
+                        </a>
+                        <a class="home-prodcut-more2">
+                            <i class="iconfont-circle-arrow-right"></i>
+                            <h4>浏览更多</h4>
+                            <p>热门</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 广告5 -->
+        <div class="background-round">
+            <!-- 版心 -->
+            <div class="container">
+                <img src="./upload/广告6.webp" alt="">
+            </div>
         </div>
 
+        <!-- 周边 -->
+        <div class="round">
+            <!-- 版心 -->
+            <div class="container">
+                <!-- 标题 -->
+                <div class="round-title">
+                    <h3>周边</h3>
+                    <div class="round-size">
+                        <a href="">热门</a>
+                        <a href="">出行</a>
+                    </div>
+                </div>
+                <!-- 左边 -->
+                <div class="round-left">
+                    <img src="./upload/roundleft1.webp" alt="">
+                    <img src="./upload/roundleft2.webp" alt="">
+                </div>
+                <!-- 周边集合 -->
+                <div class="round-gather">
+                    <a href="" class="round-product">
+                        <img src="./upload/round1.webp" alt="">
+                        <h4>米家飞行员太阳镜 Pro</h4>
+                        <p>尼龙偏光，轻巧佩戴</p>
+                        <span>199元</span>
+                    </a>
+                    <a href="" class="round-product">
+                        <img src="./upload/round2.webp" alt="">
+                        <h4>小米巨能中性笔10支装</h4>
+                        <p>一支顶4支，超长顺滑书写</p>
+                        <span>9.99元</span>
+                    </a>
+                    <a href="" class="round-product">
+                        <img src="./upload/round3.webp" alt="">
+                        <h4>小米旅行箱 20英寸 布朗熊限量版</h4>
+                        <p>"国际巨星"LINE FRIENDS布朗熊</p>
+                        <span>349元</span>
+                    </a>
+
+                    <a href="" class="round-product">
+                        <img src="./upload/round4.webp" alt="">
+                        <h4>米家迷你保温杯</h4>
+                        <p>可以随身携带的温度</p>
+                        <span>49元</span>
+                    </a>
+                    <a href="" class="round-product">
+                        <img src="./upload/round5.webp" alt="">
+                        <h4>米家驱蚊器基础版3个装</h4>
+                        <p>3个装 长效驱蚊</p>
+                        <span>99元</span>
+                    </a>
+                    <a href="" class="round-product">
+                        <img src="./upload/round6.webp" alt="">
+                        <h4>3卷抽绳式垃圾袋</h4>
+                        <p>让清洁更简单</p>
+                        <span>9.9元</span>
+                    </a>
+                    <a href="" class="round-product">
+                        <img src="./upload/round7.webp" alt="">
+                        <h4>贝医生巴氏牙刷 四色装</h4>
+                        <p>进口刷毛 好品质</p>
+                        <span>37.9元</span>
+                    </a>
+                    <a class="home-prodcut-more1">
+                        <img src="./upload/match8.webp" alt="">
+                        <h4>8H乳胶弹簧静<br>音床垫M3</h4>
+                        <span>1599元起</span>
+                    </a>
+                    <a class="home-prodcut-more2">
+                        <i class="iconfont-circle-arrow-right"></i>
+                        <h4>浏览更多</h4>
+                        <p>热门</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- 广告 -->
+        <div class="background-pen">
+            <!-- 版心 -->
+            <div class="container">
+                <img src="./upload/广告7.webp" alt="">
+            </div>
+        </div>
+        <!-- 小米视频介绍 -->
+        <div class="mi-vedio">
+            <!-- 版心 -->
+            <div class="container clearfix">
+                <!-- 标题 -->
+                <div class="mi-title">
+                    <span>视频</span>
+                    <div class="mi-title-button">
+                        <a href="">查看全部</a>
+                        <a href="" class="iconfont-arrow-right-big"></a>
+                    </div>
+                </div>
+                <!-- 视频 -->
+                <div class="vedio">
+                    <!-- 视频盒子 -->
+                    <div class="vedio-box">
+                        <a href="" class="vedio-box-tubiao">
+                            <i class="iconfont-play"></i>
+                        </a>
+                        <img src="./upload/vedio1.webp" alt="">
+                        <!-- 文字介绍 -->
+                        <div class="mi-vedio-size">
+                            <span>小米MIX Alpha 开箱视频</span>
+                        </div>
+                    </div>
+                    <!-- 视频盒子 -->
+                    <div class="vedio-box">
+                        <a href="" class="vedio-box-tubiao">
+                                <i class="iconfont-play"></i>
+                        </a>
+                        <img src="./upload/vedio2..webp" alt="">
+                        <!-- 文字介绍 -->
+                        <div class="mi-vedio-size">
+                            <span>小米5G新品手机发布会</span>
+                        </div>
+                    </div>
+                    <!-- 视频盒子 -->
+                    <div class="vedio-box">
+                        <a href="" class="vedio-box-tubiao">
+                                <i class="iconfont-play"></i>
+                        </a>
+                        <img src="./upload/vedio3.webp" alt="">
+                        <!-- 文字介绍 -->
+                        <div class="mi-vedio-size">
+                            <span>Redmi Note 8 系列发布会
+                            </span>
+                        </div>
+                    </div>
+                    <!-- 视频盒子 -->
+                    <div class="vedio-box">
+                        <a href="" class="vedio-box-tubiao">
+                                <i class="iconfont-play"></i>
+                        </a>
+                        <img src="./upload/vedio4.webp" alt="">
+                        <!-- 文字介绍 -->
+                        <div class="mi-vedio-size">
+                            <span>小米电视5 创新背后的故事</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
+    <div class="box-small-small">
+        <!-- 其他 -->
+        <div class="other">
+            <!-- 版心 -->
+            <div class="container">
+                <!-- 其他服务 -->
+                <div class="other-server">
+                    <a href="" class="other-server-a">
+
+                        <h3><i class="iconfont-tool"></i>
+                            预约维修服务</h3>
+                    </a>
+                    <a href="" class="other-server-a">
+
+                        <h3><i class="iconfont-circle-7"></i>七天无理由退货</h3>
+                    </a>
+                    <a href="" class="other-server-a">
+
+                        <h3><i class="iconfont-circle-15"></i>15天免费换货</h3>
+                    </a>
+                    <a href="" class="other-server-a">
+
+                        <h3><i class="iconfont-gift"></i>满150元包邮</h3>
+                    </a>
+                    <a href="" class="other-server-a">
+
+                        <h3><i class="iconfont-location"></i>520余家售后网点</h3>
+                    </a>
+                </div>
+                <!-- 服务列表 -->
+                <div class="server-list">
+                    <!-- 服务列表项 -->
+                    <div class="server-list-a">
+                        <dl>
+                            <dt>帮助中心</dt>
+                            <dd><a href="#">账户管理</a></dd>
+                            <dd><a href="#">购物指南</a></dd>
+                            <dd><a href="#">订单操作</a></dd>
+                        </dl>
+                        <!-- 11.1.1.1 其他服务项 -->
+                        <dl>
+                            <dt>服务支持</dt>
+                            <dd><a href="#">售后政策</a></dd>
+                            <dd><a href="#">自助服务</a></dd>
+                            <dd><a href="#">相关下载</a></dd>
+                        </dl>
+                        <!-- 11.1.1.1 其他服务项 -->
+                        <dl>
+                            <dt>线下门店</dt>
+                            <dd><a href="#">小米之家</a></dd>
+                            <dd><a href="#">服务网点</a></dd>
+                            <dd><a href="#">授权体验店</a></dd>
+                        </dl>
+                        <!-- 11.1.1.1 其他服务项 -->
+                        <dl>
+                            <dt>关于小米</dt>
+                            <dd><a href="#">了解小米</a></dd>
+                            <dd><a href="#">加入小米</a></dd>
+                            <dd><a href="#">投资者关系</a></dd>
+                        </dl>
+                        <!-- 11.1.1.1 其他服务项 -->
+                        <dl>
+                            <dt>关注我们</dt>
+                            <dd><a href="#">新浪微博</a></dd>
+                            <dd><a href="#">官方微信</a></dd>
+                            <dd><a href="#">联系我们</a></dd>
+                        </dl>
+                        <!-- 11.1.1.1 其他服务项 -->
+                        <dl>
+                            <dt>特色服务</dt>
+                            <dd><a href="#">F码通道</a></dd>
+                            <dd><a href="#">礼物码</a></dd>
+                            <dd><a href="#">防伪查询</a></dd>
+                        </dl>
+                    </div>
+
+                </div>
+            </div>
+
+            <!-- 11.1.2 人工服务 -->
+            <div class="other-person">
+                <h3>400-100-5678</h3>
+                <p>周一至周日 8:00-18:00 <br> (仅收市话费)</p>
+                <a href=""> <i class="iconfont-message2"></i> 人工客服</a>
+            </div>
+        </div>
+    </div>
+    </div>
 
     </div>
+    <!-- 12.底部 -->
+    <div class="footer">
+        <!-- 12.1版心 -->
+        <div class="container clearfix">
+            <!-- 12.1.1 logo -->
+            <a href="" class="footer-logo">
+                <img src="./img/mi-logo.png" alt="">
+            </a>
+            <!-- 12.1.2 copyright  -->
+            <div class="footer-copyright">
+                <!-- 12.1.2.1 链接 -->
+                <p class="footer-copyright-link">
+                    <a href="">小米商城 </a>
+                    | <a href="">MIUI </a>
+                    | <a href=""> 米家 </a>
+                    | <a href=""> 米聊 </a>
+                    | <a href="">多看 </a>
+                    | <a href="">游戏 </a>
+                    | <a href="">路由器 </a>
+                    | <a href="">米粉卡 </a>
+                    | <a href="">政企服务 </a>
+                    | <a href="">小米天猫店 </a>
+                    | <a href="">小米集团隐私政策 </a>
+                    | <a href="">小米公司儿童信息保护规则 </a>
+                    | <a href="">小米商城隐私政策 </a>
+                    | <a href="">小米商城用户协议 </a>
+                    | <a href="">问题反馈 </a>
+                    | <a href="">廉正举报 </a>
+                    | <a href="">诚信合规 </a>
+                    | <a href="">Select Location </a>
+                    </a>
+                </p>
+                <!-- 12.1.2.2 许可证 -->
+                <p class="footer-copyright-agreement">
+                    <span>&copy;</span>
+                    <a href="">mi.com 京ICP证110507号 京ICP备10046444号 京公网安备11010802020134号 京网文[2017]1530-131号</a> <br>
+                    <a href="">（京）网械平台备字（2018）第00005号 互联网药品信息服务资格证 (京) -非经营性-2014-0090 营业执照 医疗器械公告</a> <br>
+                    <a href="">增值电信业务许可证 网络食品经营备案（京）【2018】WLSPJYBAHF-12 食品经营许可证</a><br>
+                    <span>违法和不良信息举报电话：185-0130-1238 知识产权侵权投诉 本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</span>
+                </p>
+
+                <!-- 12.1.2.3 商标 -->
+                <div class="footer-copyright-brand">
+                    <img src="./img/truste.png" alt="">
+                    <img src="./img/v-logo-1.png" alt="">
+                    <img src="./img/v-logo-2.png" alt="">
+                    <img src="./img/v-logo-3.png" alt="">
+                    <img src="./img/v-logo-4.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <div class="footer-slogan">
+            <img src="./img/slogan2016.png" alt="">
+        </div>
+
 
 
 
